remove obsolete preview-enabling